--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ pandas
 numpy
 statsmodels
 gunicorn
+csv
+matplotlib.pyplot
+statsmodels.tsa.api
+statsmodels.tsa.holtwinters
+sklearn.metrics
+tabulate
